# LEI-ISEC

./: README.md
1º ANO/: README.md
1º ANO/Análise Matemática I/: README.md
1º ANO/Análise Matemática II/: README.md
1º ANO/Eletrónica/: 06-04-2021.py  12443.py  README.md  Schematic1.MVL  Schematic1.als  Schematic1.cir  Schematic1.net  Schematic1.out  Schematic1.sch  sadsad.py
1º ANO/Fundamentos de Computação Gráfica/: README.md
1º ANO/Gestão/: README.md
1º ANO/Intridução à Programação/: Q3_Ex3_IP_Dinis_Falcão.c  README.md
1º ANO/Introdução à Programação/: Q2_ExA_IP.c  README.md
1º ANO/Linguagens Script/: README.md
1º ANO/Métodos Estatísticos/: README.md
2º ANO/: README.md
2º ANO/Introdução à Inteligência Artificial/Trabalho Prático 2/TP2/: CMakeLists.txt  IIA_Ficha7_Resultados.xlsx
2º ANO/Introdução à Inteligência Artificial/Trabalho Prático 2/TP2/CodigoTrepaColinas/: algoritmo.c  algoritmo.h  funcao.c  funcao.h  main.c  teste.txt  utils.c  utils.h
2º ANO/Introdução à Inteligência Artificial/Trabalho Prático 2/TP2/Evolutivo/: KSP.cbp  algoritmo.h  funcao.c  funcao.h  main.c  utils.c
2º ANO/Introdução à Inteligência Artificial/Trabalho Prático 2/TP2/Hibrido/: algoritmo.c  algoritmo.h  funcao.c  main.c  utils.h
2º ANO/Programação Orientada a Objetos/Meta 2/: Aparelho.cpp  Aparelho.h  CMakeLists.txt  Componente.cpp  Componente.h  Habitacao.cpp  Habitacao.h  Processador.cpp  Processador.h  Propriedade.cpp  Propriedade.h  Regra.cpp  Regra.h  Sensor.cpp  Sensor.h  Simulador.cpp  Simulador.h  Terminal.cpp  Terminal.h  Zona.cpp  Zona.h  main.cpp  poo_2324_m2_DinisFalcao_2020130403_DavidPires_2019129618.txt
2º ANO/Programação Orientada a Objetos/Meta 2/Aparelhos/: Aquecedor.cpp  Aquecedor.h  Aspersor.cpp  Aspersor.h  Lampada.cpp  Lampada.h  Refrigerador.cpp  Refrigerador.h
2º ANO/Programação Orientada a Objetos/Meta 2/Propriedades/: Fumo.cpp  Fumo.h  Humidade.cpp  Humidade.h  Luz.cpp  Luz.h  Radiacao.cpp  Radiacao.h  Som.cpp  Som.h  Temperatura.cpp  Temperatura.h  Vibracao.cpp  Vibracao.h
2º ANO/Programação Orientada a Objetos/Meta 2/Regras/: Entre.cpp  Entre.h  Fora.cpp  Fora.h  IgualA.cpp  IgualA.h  MaiorQue.cpp  MaiorQue.h  MenorQue.cpp  MenorQue.h
3º ANO/: README.md
(+910 files in other folders)
